--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <div class="opt">
         <div class="lang"><a href="index-en.html">EN</a></div>
         <div class="xtr">
-          <div class="srch"><i class="fas fa-search"></i></div>
           <form action=""><i class="fas fa-times-circle"></i>
             <div class="cont">
               <input type="text" placeholder="عن ماذا تبحث؟"/>
@@ -46,6 +45,7 @@
       <div class="container">
         <div class="navCon">
           <div class="logo"><a href="index.html"><img src="images/logo.png" alt=""/></a>
+            <div class="srch"><i class="fas fa-search"></i></div>
             <div class="icon"><i class="fas fa-bars"></i></div>
           </div>
           <div class="links">
@@ -58,13 +58,13 @@
               <li><a class="link" href="#">إتصل بنا</a></li>
             </ul>
             <div class="xtr">
-              <div class="srch"><i class="fas fa-search"></i></div>
               <form action=""><i class="fas fa-times-circle"></i>
                 <div class="cont">
                   <input type="text" placeholder="عن ماذا تبحث؟"/>
                   <button><i class="fas fa-search"></i></button>
                 </div>
               </form>
+              <div class="srch"><i class="fas fa-search"></i></div>
               <div class="lang"><a href="index-en.html">EN</a></div>
             </div>
           </div>
@@ -255,5 +255,6 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="http://localhost:35729/livereload.js"></script>
   </body>
 </html>
